[gd_scene load_steps=7 format=3 uid="uid://cejoccro1mutj"]

[ext_resource type="FontFile" uid="uid://djrhmkiluv8lh" path="res://Fonts/TheEndFont(RF).ttf" id="1_uaamm"]
[ext_resource type="Script" path="res://Themes/main_menu.gd" id="1_xke4r"]
[ext_resource type="Theme" uid="uid://cm7u8tucrkcqk" path="res://Themes/Menu_Theme.tres" id="2_ypmvn"]

[sub_resource type="Animation" id="Animation_6vghp"]
resource_name = "JoinTwo"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Lbl2:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.196078, 0.145098, 0), Color(1, 0.196078, 0.145098, 0), Color(1, 0.196078, 0.145098, 1)]
}

[sub_resource type="Animation" id="Animation_co41f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Lbl2:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.196078, 0.145098, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pxinx"]
_data = {
"JoinTwo": SubResource("Animation_6vghp"),
"RESET": SubResource("Animation_co41f")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xke4r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1128.0
offset_bottom = 616.0

[node name="Lbl2" type="Label" parent="Main"]
layout_mode = 2
offset_left = 792.0
offset_top = -64.0
offset_right = 1068.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(1, 0.196078, 0.145098, 1)
theme_override_fonts/font = ExtResource("1_uaamm")
theme_override_font_sizes/font_size = 471
text = "2"

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uaamm")
theme_override_font_sizes/font_size = 170
text = "Janitory 
Activity"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="BtnStart" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ypmvn")
text = "Start Game"
alignment = 0

[node name="BtnSettings" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ypmvn")
text = "Settings"
alignment = 0

[node name="BtnExit" type="Button" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ypmvn")
text = "Exit"
alignment = 0

[node name="Settings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1128.0
offset_bottom = 616.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="LblSettings" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uaamm")
theme_override_font_sizes/font_size = 148
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="CheckBox" type="CheckBox" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ypmvn")
button_pressed = true
text = "Fullscreen"

[node name="BtnBack" type="Button" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ypmvn")
text = "Back"
alignment = 0

[node name="LblVersion" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 616.0
offset_right = 1144.0
offset_bottom = 639.0
text = "Version 1.0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "JoinTwo"
libraries = {
"": SubResource("AnimationLibrary_pxinx")
}

[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/VBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/VBoxContainer/BtnBack" to="." method="_on_btn_back_pressed"]
